# fullstack-dwh-ml-mlops

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: README.md  app.yaml  base.yaml  data_config.yaml  ensemble.yaml  model.yaml  model_config.yaml  train_config.yaml  training.yaml
docs/: mlops_core  インポート.md  ゴールドテーブル.md  データ処理.md  フォルダ構成.md  一歩先 の工夫.md  基本設計.md  汎用データ前処理テンプレート設計書.md
mlops_core/: __init__.py
mlops_core/config/: __init__.py
mlops_core/tracking/: __init__.py  mlflow_helper.py
src/: __init__.py
src/data_ingest/: ingest_raw.py
src/dbt/: .gitignore  .user.yml  README.md  dbt_project.yml  packages.yml  profiles.yml  run_dbt_pipeline.py
src/dbt/models/: sources.yml
src/dbt/models/gold/: ft_house_ml.py
src/dbt/models/marts/: f_house_ml.py  f_house_ml.yml
src/dbt/models/silver/: silver_house_data.yml
src/dbt/models/staging/: stg_house_data.sql
src/dbt/scripts/: ingest_raw_data_dbt.py
src/dwh/: ingest_raw_data.py
src/pipelines/: __init__.py
